Define dimensions for .hero based on the resolution of the image file, for that purpose, create --hero-width and --hero-height variables. Center .hero. Ensure .hero-background and .hero-background-image occupy the entirety of .hero without expanding or overflowing .hero

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 html {
     font-family: "Inter", sans-serif;
+    font-size: 16px;
     font-optical-sizing: auto;
 }
 
@@ -16,6 +17,8 @@ html {
     --color-4: #F3F4F6;
     --color-5: #FFFFFF;
     --color-6: #E5E7EB;
+    --hero-width: 80rem;
+    --hero-height: 15rem;
     --gap-1: 1.5rem;
     --gap-2: calc(var(--gap-1) / 3);
     --input-height: 3rem;
@@ -28,11 +31,22 @@ html {
 /* LAYOUT */
 .hero {
     position: relative;
+    width: min(100%, var(--hero-width));
+    height: var(--hero-height);
+    margin: auto;
 }
 .hero-background {
     position: absolute;
     top: 0;
     z-index: -1;
+    display: block;
+    width: 100%;
+    height: var(--hero-height);
+}
+.hero-background-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;    
 }
 
 main {
